--- a/css/footer/footer.css
+++ b/css/footer/footer.css
@@ -6,6 +6,14 @@
 	background-color: rgba(47, 50, 75, 1);
 }
 
+.footer__inner {
+	max-width: 1200px;
+	justify-content: space-between;
+	margin-left: auto;
+	margin-right: auto;
+
+}
+
 .footer__logo {
 	margin-right: 19px;
 }
@@ -22,11 +30,18 @@
 	line-height: 16.88px;
 }
 
+.footer__center-text {
+	margin-left: -4px;
+	letter-spacing: 0.5px;
+}
+
 .footer__left-text {
 	width: 127px;
+	
 }
 
 .footer__right {
+	position: relative;
 	flex-direction: column;
 	text-align: center;
 	width: 210px;
@@ -36,13 +51,25 @@
 .footer__link-tel {
 	margin-bottom: 3px;
 	font-size: 24px;
-	line-height: 28.13px;
+	line-height: 29.13px;
 	text-decoration: none;
 }
 
 .footer__link-text {
 	font-size: 16px;
 	line-height: 18.45px;
+	text-decoration: none;
+}
+
+.footer__link-text::after {
+	display: block;
+	position: absolute;
+	content: "";
+	width: 134px;
+	height: 1px;
+	top: 56px;
+	left: 19%;
+	background-color: rgba(255, 255, 255, 0.5);
 }
 
 /* !! ========== 1024px ====== */
@@ -51,6 +78,14 @@
 	.footer {
 		padding-top: 37px;
 		padding-bottom: 49px;
+		
+	}
+
+	.footer__inner {
+		justify-content: space-between;
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 964px;
 	}
 
 	.footer__logo {
@@ -72,6 +107,24 @@
 	.footer__link-text {
 		font-size: 13px;
 		line-height: 15.23px;
+	}
+
+	.list__title {
+		margin-bottom: 16px;
+		margin-left: auto;
+		margin-right: auto;
+		font-size: 32px;
+		line-height: 37.5px;
+	}
+
+	.list__text {
+		margin-bottom: 50px;
+		margin-left: auto;
+		margin-right:auto;
+		width: 475px;
+		font-weight: 500;
+		font-size: 20px;
+		line-height: 23.44px;
 	}
 }
 
@@ -128,6 +181,16 @@
 /* !! ======== 320px ======*/
 
 @media screen and (max-width: 320px) {
+
+	.footer {
+		padding-top: 26px;
+		padding-bottom: 53px;
+		height: 30px;
+	}
+
+	.footer__inner {
+		justify-content: space-between;
+	}
 	.footer__logo {
 		width: 30px;
 		height: 30px;
